Add header items

--- a/index.html
+++ b/index.html
@@ -3,11 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <div class="sidebar-icon"></div>
+                <div class="sidebar-text">Dashboard</div>
+            </div>
+            <div class="menu">
+                <div class="Home">Home</div>
+                <div class="Profile">Profile</div>
+                <div class="Message">Message</div>
+                <div class="History">History</div>
+                <div class="Task">Task</div>
+                <div class="Communities">Communities</div>
+                <div class="EMPTYSPACE">//</div>
+                <div class="Settings">Settings</div>
+                <div class="Support">Support</div>
+                <div class="Privacy">Privacy</div>
+            </div>
+        </div>
+        <div class="header">
+            <div class="search">
+                <img src="temp" alt="magnifiying glass">
+                <input type="search" name="project-search" id="search-bar">
+            </div>
+            <div class="user">
+                <img src="temp" alt="bell">
+                <img src="temp" alt="profile image">
+                <div class="username">First Last</div>
+            </div>
+            <div class="greeting">
+                <img src="temp" alt="big profile image">
+                <div class="greetings">
+                    <div>Hi there,</div>
+                    <div class="usertag">First Last (@tag)</div>
+                </div>
+            </div>
+            <div class="actionbar">
+                <button class="button-new">New</button>
+                <button class="button-upload">Upload</button>
+                <button class="button-share">Share</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
