Add content section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="header">
             <div class="search">
                 <img src="temp" alt="magnifiying glass">
-                <input type="search" name="project-search" id="search-bar">
+                <input type="search" name="items-search" id="search-bar">
             </div>
             <div class="user">
                 <img src="temp" alt="bell">
@@ -48,6 +48,86 @@
                 <button class="button-new">New</button>
                 <button class="button-upload">Upload</button>
                 <button class="button-share">Share</button>
+            </div>
+        </div>
+        <div class="content">
+            <div class="project-section">
+                <div class="project-header">Your Projects</div>
+                <div class="projects">
+                    <div class="card">
+                        <div class="card-title"></div>
+                        <div class="card-desc"></div>
+                        <div class="card-act">
+                            <div class="card-fav"></div>
+                            <div class="card-view"></div>
+                            <div class="card-link"></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title"></div>
+                        <div class="card-desc"></div>
+                        <div class="card-act">
+                            <div class="card-fav"></div>
+                            <div class="card-view"></div>
+                            <div class="card-link"></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title"></div>
+                        <div class="card-desc"></div>
+                        <div class="card-act">
+                            <div class="card-fav"></div>
+                            <div class="card-view"></div>
+                            <div class="card-link"></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title"></div>
+                        <div class="card-desc"></div>
+                        <div class="card-act">
+                            <div class="card-fav"></div>
+                            <div class="card-view"></div>
+                            <div class="card-link"></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title"></div>
+                        <div class="card-desc"></div>
+                        <div class="card-act">
+                            <div class="card-fav"></div>
+                            <div class="card-view"></div>
+                            <div class="card-link"></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title"></div>
+                        <div class="card-desc"></div>
+                        <div class="card-act">
+                            <div class="card-fav"></div>
+                            <div class="card-view"></div>
+                            <div class="card-link"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="news">
+                <div class="announcement-section">
+                    <div class="annoucement-header">Announcements</div>
+                    <div class="annoucements">
+                        <div class="item"></div>
+                        <div class="item"></div>
+                        <div class="item"></div>
+                    </div>
+                </div>
+                <div class="trending-section">
+                    <div class="trending-header">Trending</div>
+                    <div class="trending">
+                        <div class="tag"></div>
+                        <div class="tag"></div>
+                        <div class="tag"></div>
+                        <div class="tag"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
