--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="project-header">Your Projects</div>
                 <div class="projects">
                     <div class="card">
-                        <div class="card-title"></div>
-                        <div class="card-desc"></div>
+                        <div class="card-title">Project 1</div>
+                        <div class="card-desc">description 1</div>
                         <div class="card-act">
                             <div class="card-fav"></div>
                             <div class="card-view"></div>
@@ -64,8 +64,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-title"></div>
-                        <div class="card-desc"></div>
+                        <div class="card-title">Project 2</div>
+                        <div class="card-desc">description 2</div>
                         <div class="card-act">
                             <div class="card-fav"></div>
                             <div class="card-view"></div>
@@ -73,8 +73,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-title"></div>
-                        <div class="card-desc"></div>
+                        <div class="card-title">Project 3</div>
+                        <div class="card-desc">description 3</div>
                         <div class="card-act">
                             <div class="card-fav"></div>
                             <div class="card-view"></div>
@@ -82,8 +82,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-title"></div>
-                        <div class="card-desc"></div>
+                        <div class="card-title">Project 4</div>
+                        <div class="card-desc">description 4</div>
                         <div class="card-act">
                             <div class="card-fav"></div>
                             <div class="card-view"></div>
@@ -91,8 +91,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-title"></div>
-                        <div class="card-desc"></div>
+                        <div class="card-title">Project 5</div>
+                        <div class="card-desc">description 5</div>
                         <div class="card-act">
                             <div class="card-fav"></div>
                             <div class="card-view"></div>
@@ -100,8 +100,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-title"></div>
-                        <div class="card-desc"></div>
+                        <div class="card-title">Project 6</div>
+                        <div class="card-desc">description 6</div>
                         <div class="card-act">
                             <div class="card-fav"></div>
                             <div class="card-view"></div>
@@ -114,18 +114,43 @@
                 <div class="announcement-section">
                     <div class="annoucement-header">Announcements</div>
                     <div class="annoucements">
-                        <div class="item"></div>
-                        <div class="item"></div>
-                        <div class="item"></div>
+                        <div class="item">
+                            <div class="item-title">Announcement 1</div>
+                            <div class="item-desc">announcement description 1</div>
+                        </div>
+                        <div class="item">
+                            <div class="item-title">Announcement 2</div>
+                            <div class="item-desc">announcement description 2</div>
+                        </div>
+                        <div class="item">
+                            <div class="item-title">Announcement 3</div>
+                            <div class="item-desc">announcement description 3</div>
+                        </div>
                     </div>
                 </div>
                 <div class="trending-section">
                     <div class="trending-header">Trending</div>
                     <div class="trending">
-                        <div class="tag"></div>
-                        <div class="tag"></div>
-                        <div class="tag"></div>
-                        <div class="tag"></div>
+                        <div class="tags">
+                            <img src="image-1" alt="tag-1">
+                            <div class="tag">@tag-1</div>
+                            <div class="tag-desc">tag description 1</div>
+                        </div>
+                        <div class="tags">
+                            <img src="image-2" alt="tag-2">
+                            <div class="tag">@tag-2</div>
+                            <div class="tag-desc">tag description 2</div>
+                        </div>
+                        <div class="tags">
+                            <img src="image-3" alt="tag-3">
+                            <div class="tag">@tag-3</div>
+                            <div class="tag-desc">tag description 3</div>
+                        </div>
+                        <div class="tags">
+                            <img src="image-4" alt="tag-4">
+                            <div class="tag">@tag-4</div>
+                            <div class="tag-desc">tag description 4</div>
+                        </div>
                     </div>
                 </div>
             </div>
