Edit sidebar items

--- a/index.html
+++ b/index.html
@@ -15,16 +15,46 @@
                 <div class="sidebar-text">Dashboard</div>
             </div>
             <div class="menu">
-                <div class="Home">Home</div>
-                <div class="Profile">Profile</div>
-                <div class="Message">Message</div>
-                <div class="History">History</div>
-                <div class="Task">Task</div>
-                <div class="Communities">Communities</div>
-                <div class="EMPTYSPACE">//</div>
-                <div class="Settings">Settings</div>
-                <div class="Support">Support</div>
-                <div class="Privacy">Privacy</div>
+                <div class="Home">
+                    <img src="Home-img" alt="Home-icon">
+                    <div class="menu-text">Home</div>
+                </div>
+                <div class="Profile">
+                    <img src="Profile-img" alt="Profile-icon">
+                    <div class="menu-text">Profile</div>
+                </div>
+                <div class="Message">
+                    <img src="Message-img" alt="Message-icon">
+                    <div class="menu-text">Message</div>
+                </div>
+                <div class="History">
+                    <img src="History-img" alt="History-icon">
+                    <div class="menu-text">History</div>
+                </div>
+                <div class="Task">
+                    <img src="Task-img" alt="Task-icon">
+                    <div class="menu-text">Task</div>
+                </div>
+                <div class="Communities">
+                    <img src="Communities-img" alt="Communities-icon">
+                    <div class="menu-text">Communities</div>
+                </div>
+                <div class="//">
+                    <img src="//-img" alt="//-icon">
+                    <div class="menu-text">//</div>
+                </div>
+                <div class="Settings">
+                    <img src="Settings-img" alt="Settings-icon">
+                    <div class="menu-text">Settings</div>
+                </div>
+                <div class="Support">
+                    <img src="Support-img" alt="Support-icon">
+                    <div class="menu-text">Support</div>
+                </div>
+                <div class="Privacy">
+                    <img src="Privacy-img" alt="Privacy-icon">
+                    <div class="menu-text">Privacy</div>
+                </div>
             </div>
         </div>
         <div class="header">
