Fix sidebar empty space

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div class="sidebar-text">Dashboard</div>
             </div>
             <div class="menu">
+                <div class="empty-space"></div>
                 <div class="Home">
                     <img src="Home-img" alt="Home-icon">
                     <div class="menu-text">Home</div>
@@ -39,10 +40,7 @@
                     <img src="Communities-img" alt="Communities-icon">
                     <div class="menu-text">Communities</div>
                 </div>
-                <div class="//">
-                    <img src="//-img" alt="//-icon">
-                    <div class="menu-text">//</div>
-                </div>
+                <div class="empty-space"></div>
                 <div class="Settings">
                     <img src="Settings-img" alt="Settings-icon">
                     <div class="menu-text">Settings</div>
