Change sidebar grid layout

--- a/index.html
+++ b/index.html
@@ -55,129 +55,131 @@
                 </div>
             </div>
         </div>
-        <div class="header">
-            <div class="search">
-                <img src="temp" alt="magnifiying glass">
-                <input type="search" name="items-search" id="search-bar">
-            </div>
-            <div class="user">
-                <img src="temp" alt="bell">
-                <img src="temp" alt="profile image">
-                <div class="username">First Last</div>
-            </div>
-            <div class="greeting">
-                <img src="temp" alt="big profile image">
-                <div class="greetings">
-                    <div>Hi there,</div>
-                    <div class="usertag">First Last (@tag)</div>
+        <div class="sub-container">
+            <div class="header">
+                <div class="search">
+                    <img src="temp" alt="magnifiying glass">
+                    <input type="search" name="items-search" id="search-bar">
                 </div>
-            </div>
-            <div class="actionbar">
-                <button class="button-new">New</button>
-                <button class="button-upload">Upload</button>
-                <button class="button-share">Share</button>
-            </div>
-        </div>
-        <div class="content">
-            <div class="project-section">
-                <div class="project-header">Your Projects</div>
-                <div class="projects">
-                    <div class="card">
-                        <div class="card-title">Project 1</div>
-                        <div class="card-desc">description 1</div>
-                        <div class="card-act">
-                            <div class="card-fav"></div>
-                            <div class="card-view"></div>
-                            <div class="card-link"></div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-title">Project 2</div>
-                        <div class="card-desc">description 2</div>
-                        <div class="card-act">
-                            <div class="card-fav"></div>
-                            <div class="card-view"></div>
-                            <div class="card-link"></div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-title">Project 3</div>
-                        <div class="card-desc">description 3</div>
-                        <div class="card-act">
-                            <div class="card-fav"></div>
-                            <div class="card-view"></div>
-                            <div class="card-link"></div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-title">Project 4</div>
-                        <div class="card-desc">description 4</div>
-                        <div class="card-act">
-                            <div class="card-fav"></div>
-                            <div class="card-view"></div>
-                            <div class="card-link"></div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-title">Project 5</div>
-                        <div class="card-desc">description 5</div>
-                        <div class="card-act">
-                            <div class="card-fav"></div>
-                            <div class="card-view"></div>
-                            <div class="card-link"></div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-title">Project 6</div>
-                        <div class="card-desc">description 6</div>
-                        <div class="card-act">
-                            <div class="card-fav"></div>
-                            <div class="card-view"></div>
-                            <div class="card-link"></div>
-                        </div>
+                <div class="user">
+                    <img src="temp" alt="bell">
+                    <img src="temp" alt="profile image">
+                    <div class="username">First Last</div>
+                </div>
+                <div class="greeting">
+                    <img src="temp" alt="big profile image">
+                    <div class="greetings">
+                        <div>Hi there,</div>
+                        <div class="usertag">First Last (@tag)</div>
                     </div>
                 </div>
+                <div class="actionbar">
+                    <button class="button-new">New</button>
+                    <button class="button-upload">Upload</button>
+                    <button class="button-share">Share</button>
+                </div>
             </div>
-            <div class="news">
-                <div class="announcement-section">
-                    <div class="annoucement-header">Announcements</div>
-                    <div class="annoucements">
-                        <div class="item">
-                            <div class="item-title">Announcement 1</div>
-                            <div class="item-desc">announcement description 1</div>
+            <div class="content">
+                <div class="project-section">
+                    <div class="project-header">Your Projects</div>
+                    <div class="projects">
+                        <div class="card">
+                            <div class="card-title">Project 1</div>
+                            <div class="card-desc">description 1</div>
+                            <div class="card-act">
+                                <div class="card-fav"></div>
+                                <div class="card-view"></div>
+                                <div class="card-link"></div>
+                            </div>
                         </div>
-                        <div class="item">
-                            <div class="item-title">Announcement 2</div>
-                            <div class="item-desc">announcement description 2</div>
+                        <div class="card">
+                            <div class="card-title">Project 2</div>
+                            <div class="card-desc">description 2</div>
+                            <div class="card-act">
+                                <div class="card-fav"></div>
+                                <div class="card-view"></div>
+                                <div class="card-link"></div>
+                            </div>
                         </div>
-                        <div class="item">
-                            <div class="item-title">Announcement 3</div>
-                            <div class="item-desc">announcement description 3</div>
+                        <div class="card">
+                            <div class="card-title">Project 3</div>
+                            <div class="card-desc">description 3</div>
+                            <div class="card-act">
+                                <div class="card-fav"></div>
+                                <div class="card-view"></div>
+                                <div class="card-link"></div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-title">Project 4</div>
+                            <div class="card-desc">description 4</div>
+                            <div class="card-act">
+                                <div class="card-fav"></div>
+                                <div class="card-view"></div>
+                                <div class="card-link"></div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-title">Project 5</div>
+                            <div class="card-desc">description 5</div>
+                            <div class="card-act">
+                                <div class="card-fav"></div>
+                                <div class="card-view"></div>
+                                <div class="card-link"></div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-title">Project 6</div>
+                            <div class="card-desc">description 6</div>
+                            <div class="card-act">
+                                <div class="card-fav"></div>
+                                <div class="card-view"></div>
+                                <div class="card-link"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="trending-section">
-                    <div class="trending-header">Trending</div>
-                    <div class="trending">
-                        <div class="tags">
-                            <img src="image-1" alt="tag-1">
-                            <div class="tag">@tag-1</div>
-                            <div class="tag-desc">tag description 1</div>
+                <div class="news">
+                    <div class="announcement-section">
+                        <div class="annoucement-header">Announcements</div>
+                        <div class="annoucements">
+                            <div class="item">
+                                <div class="item-title">Announcement 1</div>
+                                <div class="item-desc">announcement description 1</div>
+                            </div>
+                            <div class="item">
+                                <div class="item-title">Announcement 2</div>
+                                <div class="item-desc">announcement description 2</div>
+                            </div>
+                            <div class="item">
+                                <div class="item-title">Announcement 3</div>
+                                <div class="item-desc">announcement description 3</div>
+                            </div>
                         </div>
-                        <div class="tags">
-                            <img src="image-2" alt="tag-2">
-                            <div class="tag">@tag-2</div>
-                            <div class="tag-desc">tag description 2</div>
-                        </div>
-                        <div class="tags">
-                            <img src="image-3" alt="tag-3">
-                            <div class="tag">@tag-3</div>
-                            <div class="tag-desc">tag description 3</div>
-                        </div>
-                        <div class="tags">
-                            <img src="image-4" alt="tag-4">
-                            <div class="tag">@tag-4</div>
-                            <div class="tag-desc">tag description 4</div>
+                    </div>
+                    <div class="trending-section">
+                        <div class="trending-header">Trending</div>
+                        <div class="trending">
+                            <div class="tags">
+                                <img src="image-1" alt="tag-1">
+                                <div class="tag">@tag-1</div>
+                                <div class="tag-desc">tag description 1</div>
+                            </div>
+                            <div class="tags">
+                                <img src="image-2" alt="tag-2">
+                                <div class="tag">@tag-2</div>
+                                <div class="tag-desc">tag description 2</div>
+                            </div>
+                            <div class="tags">
+                                <img src="image-3" alt="tag-3">
+                                <div class="tag">@tag-3</div>
+                                <div class="tag-desc">tag description 3</div>
+                            </div>
+                            <div class="tags">
+                                <img src="image-4" alt="tag-4">
+                                <div class="tag">@tag-4</div>
+                                <div class="tag-desc">tag description 4</div>
+                            </div>
                         </div>
                     </div>
                 </div>
