Style search object

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="sub-container">
             <div class="header">
                 <div class="search">
-                    <img src="temp" alt="magnifiying glass">
+                    <img src="./images/mag.png" alt="magnifiying glass">
                     <input type="search" name="items-search" id="search-bar">
                 </div>
                 <div class="user">
