Fix header style scaling

--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
                     <input type="search" name="items-search" id="search-bar">
                 </div>
                 <div class="user">
-                    <img src="temp" alt="bell">
-                    <img src="temp" alt="profile image">
+                    <img src="./images/bell.png" alt="bell">
+                    <img class="userimg" src="./images/user.png" alt="profile image">
                     <div class="username">First Last</div>
                 </div>
                 <div class="greeting">
-                    <img src="temp" alt="big profile image">
+                    <img class="big-userimg" src="./images/user.png" alt="big profile image">
                     <div class="greetings">
                         <div>Hi there,</div>
                         <div class="usertag">First Last (@tag)</div>
                     </div>
                 </div>
                 <div class="actionbar">
-                    <button class="button-new">New</button>
-                    <button class="button-upload">Upload</button>
-                    <button class="button-share">Share</button>
+                    <button class="button-action-new">New</button>
+                    <button class="button-action-upload">Upload</button>
+                    <button class="button-action-share">Share</button>
                 </div>
             </div>
             <div class="content">
