Add images for sidebar

--- a/index.html
+++ b/index.html
@@ -17,40 +17,40 @@
             <div class="menu">
                 <div class="empty-space"></div>
                 <div class="Home">
-                    <img src="Home-img" alt="Home-icon">
+                    <img src="./images/home.png" alt="Home-icon">
                     <div class="menu-text">Home</div>
                 </div>
                 <div class="Profile">
-                    <img src="Profile-img" alt="Profile-icon">
+                    <img src="./images/profile.png" alt="Profile-icon">
                     <div class="menu-text">Profile</div>
                 </div>
                 <div class="Message">
-                    <img src="Message-img" alt="Message-icon">
+                    <img src="./images/message.png" alt="Message-icon">
                     <div class="menu-text">Message</div>
                 </div>
                 <div class="History">
-                    <img src="History-img" alt="History-icon">
+                    <img src="./images/history.png" alt="History-icon">
                     <div class="menu-text">History</div>
                 </div>
                 <div class="Task">
-                    <img src="Task-img" alt="Task-icon">
+                    <img src="./images/tasks.png" alt="Task-icon">
                     <div class="menu-text">Task</div>
                 </div>
                 <div class="Communities">
-                    <img src="Communities-img" alt="Communities-icon">
+                    <img src="./images/communities.png" alt="Communities-icon">
                     <div class="menu-text">Communities</div>
                 </div>
                 <div class="empty-space"></div>
                 <div class="Settings">
-                    <img src="Settings-img" alt="Settings-icon">
+                    <img src="./images/settings.png" alt="Settings-icon">
                     <div class="menu-text">Settings</div>
                 </div>
                 <div class="Support">
-                    <img src="Support-img" alt="Support-icon">
+                    <img src="./images/support.png" alt="Support-icon">
                     <div class="menu-text">Support</div>
                 </div>
                 <div class="Privacy">
-                    <img src="Privacy-img" alt="Privacy-icon">
+                    <img src="./images/privacy.png" alt="Privacy-icon">
                     <div class="menu-text">Privacy</div>
                 </div>
             </div>
