--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="sidebar">
             <div class="sidebar-header">
-                <div class="sidebar-icon"></div>
+                <img class="sidebar-icon" src="./images/dashboard.png">
                 <div class="sidebar-text">Dashboard</div>
             </div>
             <div class="menu">
