Add project section styling

--- a/index.html
+++ b/index.html
@@ -87,62 +87,62 @@
                             <div class="card-title">Project 1</div>
                             <div class="card-desc">description 1</div>
                             <div class="card-act">
-                                <div class="card-fav"></div>
-                                <div class="card-view"></div>
-                                <div class="card-link"></div>
+                                <img src="./images/fav.png" alt="favorite">
+                                <img src="./images/watch.png" alt="follow">
+                                <img src="./images/link.png" alt="link">
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-title">Project 2</div>
                             <div class="card-desc">description 2</div>
                             <div class="card-act">
-                                <div class="card-fav"></div>
-                                <div class="card-view"></div>
-                                <div class="card-link"></div>
+                                <img src="./images/fav.png" alt="favorite">
+                                <img src="./images/watch.png" alt="follow">
+                                <img src="./images/link.png" alt="link">
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-title">Project 3</div>
                             <div class="card-desc">description 3</div>
                             <div class="card-act">
-                                <div class="card-fav"></div>
-                                <div class="card-view"></div>
-                                <div class="card-link"></div>
+                                <img src="./images/fav.png" alt="favorite">
+                                <img src="./images/watch.png" alt="follow">
+                                <img src="./images/link.png" alt="link">
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-title">Project 4</div>
                             <div class="card-desc">description 4</div>
                             <div class="card-act">
-                                <div class="card-fav"></div>
-                                <div class="card-view"></div>
-                                <div class="card-link"></div>
+                                <img src="./images/fav.png" alt="favorite">
+                                <img src="./images/watch.png" alt="follow">
+                                <img src="./images/link.png" alt="link">
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-title">Project 5</div>
                             <div class="card-desc">description 5</div>
                             <div class="card-act">
-                                <div class="card-fav"></div>
-                                <div class="card-view"></div>
-                                <div class="card-link"></div>
+                                <img src="./images/fav.png" alt="favorite">
+                                <img src="./images/watch.png" alt="follow">
+                                <img src="./images/link.png" alt="link">
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-title">Project 6</div>
                             <div class="card-desc">description 6</div>
                             <div class="card-act">
-                                <div class="card-fav"></div>
-                                <div class="card-view"></div>
-                                <div class="card-link"></div>
+                                <img src="./images/fav.png" alt="favorite">
+                                <img src="./images/watch.png" alt="follow">
+                                <img src="./images/link.png" alt="link">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="news">
                     <div class="announcement-section">
-                        <div class="annoucement-header">Announcements</div>
-                        <div class="annoucements">
+                        <div class="announcement-header">Announcements</div>
+                        <div class="announcements">
                             <div class="item">
                                 <div class="item-title">Announcement 1</div>
                                 <div class="item-desc">announcement description 1</div>
