Fix a spacing and background color styling issue

--- a/index.html
+++ b/index.html
@@ -147,10 +147,12 @@
                                 <div class="item-title">Announcement 1</div>
                                 <div class="item-desc">announcement description 1</div>
                             </div>
+                            <div class="item-break"></div>
                             <div class="item">
                                 <div class="item-title">Announcement 2</div>
                                 <div class="item-desc">announcement description 2</div>
                             </div>
+                            <div class="item-break"></div>
                             <div class="item">
                                 <div class="item-title">Announcement 3</div>
                                 <div class="item-desc">announcement description 3</div>
@@ -161,22 +163,22 @@
                         <div class="trending-header">Trending</div>
                         <div class="trending">
                             <div class="tags">
-                                <img src="image-1" alt="tag-1">
+                                <img src="./images/user.png" alt="tag-1">
                                 <div class="tag">@tag-1</div>
                                 <div class="tag-desc">tag description 1</div>
                             </div>
                             <div class="tags">
-                                <img src="image-2" alt="tag-2">
+                                <img src="./images/user.png" alt="tag-2">
                                 <div class="tag">@tag-2</div>
                                 <div class="tag-desc">tag description 2</div>
                             </div>
                             <div class="tags">
-                                <img src="image-3" alt="tag-3">
+                                <img src="./images/user.png" alt="tag-3">
                                 <div class="tag">@tag-3</div>
                                 <div class="tag-desc">tag description 3</div>
                             </div>
                             <div class="tags">
-                                <img src="image-4" alt="tag-4">
+                                <img src="./images/user.png" alt="tag-4">
                                 <div class="tag">@tag-4</div>
                                 <div class="tag-desc">tag description 4</div>
                             </div>
